<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main" >

    <Button
        android:id="@+id/btHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btHorizontal" />    
    <Button
        android:id="@+id/btVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btVertical" />
    <Button
        android:id="@+id/btTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btTable" />
    <Button
        android:id="@+id/btFicha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btFicha" />

</LinearLayout>